--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -1,13 +1,6 @@
 resources:
-<<<<<<< HEAD
-  - ../../base/rollout.yaml
-  - ../../base/service.yaml
-=======
-- ../../base
->>>>>>> 6ef83701a2c61e4f6070aa9c564859a0a0de4935
+  - ../../base
 
 images:
-- name: ghcr.io/hamza18599/myapp
-  newTag: 4134d80b24af642726a788159df5553d8cd7ffd2
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+  - name: ghcr.io/hamza18599/myapp
+    newTag: dev
