Update prod kustomization (zonder grote exe)

--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -1,6 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-  - ../../base
-
+- ../../base
+namespace: prod
 images:
-  - name: ghcr.io/hamza18599/myapp
-    newTag: prod
+- name: cloud-native-app
+  newName: NOOR/cloud-native-app # Zorg dat NOOR je Docker Hub naam is
+  newTag: prod-latest
