Update prod kustomization (zonder grote exe)

--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -2,5 +2,5 @@ resources:
   - ../../base
 
 images:
-  - name: ghcr.io/hamza18599:myapp:prod
+  - name: ghcr.io/hamza18599:myapp/prod
     newTag: prod
