--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -2,5 +2,5 @@ resources:
   - ../../base
 
 images:
-  - name: myapp
-    newTag: v2
+  - name: ghcr.io/hamza18599/myapp
+    newTag: 4134d80b24af642726a788159df5553d8cd7ffd2
