--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -4,3 +4,5 @@ resources:
 images:
   - name: ghcr.io/hamza18599/myapp
     newTag: 4134d80b24af642726a788159df5553d8cd7ffd2
+imagePullSecrets:
+  - name: ghcr-secret
