--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -1,8 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
   - ../../base
 
 images:
   - name: ghcr.io/hamza18599/myapp
-    newTag: 4134d80b24af642726a788159df5553d8cd7ffd2
-imagePullSecrets:
-  - name: ghcr-secret
+    newTag: latest
