--- a/k8s/overlays/qa/kustomization.yaml
+++ b/k8s/overlays/qa/kustomization.yaml
@@ -1,8 +1,9 @@
-resources:
-- ../../base
-
-images:
-- name: ghcr.io/hamza18599/myapp
-  newTag: a9100eaca8419ec3736bc4a126ad2f4f7e881875
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+resources:
+  - ../../base
+
+images:
+  - name: ghcr.io/hamza18599/myapp
+    newTag: qa
