--- a/k8s/overlays/dev/kustomization.yaml
+++ b/k8s/overlays/dev/kustomization.yaml
@@ -1,8 +1,9 @@
-resources:
-- ../../base
-
-images:
-- name: ghcr.io/hamza18599/myapp
-  newTag: d3dde584d907c5403d6befd3b58add4ee92bab75
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
+resources:
+  - ../../base
+
+images:
+  - name: ghcr.io/hamza18599/myapp
+    newTag: dev
