--- a/k8s/base/rollout.yaml
+++ b/k8s/base/rollout.yaml
@@ -21,6 +21,6 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: ghcr.io/hamza18599/myapp:latest
+          image: ghcr.io/hamza18599/myapp:prod
           ports:
             - containerPort: 8080
